--- a/src/main/resources/templates/customer/about.html
+++ b/src/main/resources/templates/customer/about.html
@@ -171,54 +171,54 @@
 								<div class="col-md-4">
 									<div class="team-member">
 										<div class="team-img">
+											<img th:src="@{/images/phap.jpg}" alt="" />
+											<div class="team-hover">
+												<p>Curabitur blandit tempus portt et non magna. Fusce dapib nibh, ut fermentum</p>
+											</div>
+										</div>
+										<div class="team-name">
+											<span>Java Back-End Developer</span>
+											<h5><a title="" href="#">Cấn Ngọc Quốc Pháp</a></h5>
+										</div>
+										<ul class="social-media">
+											<li><a title="" href="#"><i class="fa fa-facebook"></i></a></li>
+											<li><a title="" href="#"><i class="fa fa-twitter"></i></a></li>
+											<li><a title="" href="#"><i class="fa fa-google-plus"></i></a></li>
+											<li><a title="" href="#"><i class="fa fa-linkedin"></i></a></li>
+										</ul>
+									</div><!-- Team Member -->
+								</div>
+								<div class="col-md-4">
+									<div class="team-member">
+										<div class="team-img">
+											<img th:src="@{/images/binh1.jpg}" alt="" />
+											<div class="team-hover">
+												<p>Curabitur blandit tempus portt et non magna. Fusce dapib nibh, ut fermentum</p>
+											</div>
+										</div>
+										<div class="team-name">
+											<span>Fesher Java Web Back-End</span>
+											<h5><a title="" href="#">Trần Ngọc Bình</a></h5>
+										</div>
+										<ul class="social-media">
+											<li><a title="" href="https://www.facebook.com/tranngocbinh00k/"><i class="fa fa-facebook"></i></a></li>
+											<li><a title="" href="#"><i class="fa fa-twitter"></i></a></li>
+											<li><a title="" href="#"><i class="fa fa-google-plus"></i></a></li>
+											<li><a title="" href="https://www.linkedin.com/in/binh-tran-ngoc-77a5911aa/"><i class="fa fa-linkedin"></i></a></li>
+										</ul>
+									</div><!-- Team Member -->
+								</div>
+								<div class="col-md-4">
+									<div class="team-member">
+										<div class="team-img">
 											<img th:src="@{/images/resource/team1.jpg}" alt="" />
 											<div class="team-hover">
 												<p>Curabitur blandit tempus portt et non magna. Fusce dapib nibh, ut fermentum</p>
 											</div>
 										</div>
 										<div class="team-name">
-											<span>Chife Excutive Officer</span>
-											<h5><a title="" href="#">James Walter</a></h5>
-										</div>
-										<ul class="social-media">
-											<li><a title="" href="#"><i class="fa fa-facebook"></i></a></li>
-											<li><a title="" href="#"><i class="fa fa-twitter"></i></a></li>
-											<li><a title="" href="#"><i class="fa fa-google-plus"></i></a></li>
-											<li><a title="" href="#"><i class="fa fa-linkedin"></i></a></li>
-										</ul>
-									</div><!-- Team Member -->
-								</div>
-								<div class="col-md-4">
-									<div class="team-member">
-										<div class="team-img">
-											<img th:src="@{/images/resource/team2.jpg}" alt="" />
-											<div class="team-hover">
-												<p>Curabitur blandit tempus portt et non magna. Fusce dapib nibh, ut fermentum</p>
-											</div>
-										</div>
-										<div class="team-name">
-											<span>Chife Excutive Officer</span>
-											<h5><a title="" href="#">Nikki Walter</a></h5>
-										</div>
-										<ul class="social-media">
-											<li><a title="" href="#"><i class="fa fa-facebook"></i></a></li>
-											<li><a title="" href="#"><i class="fa fa-twitter"></i></a></li>
-											<li><a title="" href="#"><i class="fa fa-google-plus"></i></a></li>
-											<li><a title="" href="#"><i class="fa fa-linkedin"></i></a></li>
-										</ul>
-									</div><!-- Team Member -->
-								</div>
-								<div class="col-md-4">
-									<div class="team-member">
-										<div class="team-img">
-											<img th:src="@{/images/resource/team3.jpg}" alt="" />
-											<div class="team-hover">
-												<p>Curabitur blandit tempus portt et non magna. Fusce dapib nibh, ut fermentum</p>
-											</div>
-										</div>
-										<div class="team-name">
-											<span>Chife Excutive Officer</span>
-											<h5><a title="" href="#">Mic Waltainer</a></h5>
+											<span>Java Web Back-End Developer</span>
+											<h5><a title="" href="#">Phạm Trọng Võ</a></h5>
 										</div>
 										<ul class="social-media">
 											<li><a title="" href="#"><i class="fa fa-facebook"></i></a></li>
