--- a/src/main/resources/templates/customer/booking-form.html
+++ b/src/main/resources/templates/customer/booking-form.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<h1>Booking Form</h1>
 			<ul>
-				<li><a title="" th:href="@{/view/}">Home</a></li>
+				<li><a title="" th:href="@{/}">Home</a></li>
 				<li><a title="" th:href="@{/view/rooms-packages}">Packages</a></li>
 				<li><a title="" th:href="@{/view/packages-detail}">Package Detail</a></li>
 				<li>Booking Form</li>
