--- a/src/main/resources/templates/customer/packages-detail.html
+++ b/src/main/resources/templates/customer/packages-detail.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<h1>Package Detail</h1>
 			<ul>
-				<li><a title="" th:href="@{/home/}">Home</a></li>
+				<li><a title="" th:href="@{/}">Home</a></li>
 				<li><a title="" href="#">Packages</a></li>
 				<li><a th:href="@{/view/room-packages-grid}" title=""> Room Packages</a></li>
 			</ul>		
