--- a/src/main/resources/templates/customer/rooms-packages.html
+++ b/src/main/resources/templates/customer/rooms-packages.html
@@ -22,9 +22,9 @@
 		<div class="container">
 			<h1>Luxury Tours</h1>
 			<ul>
-				<li><a title="" href="#">Home</a></li>
+				<li><a title="" th:href="@{/}">Home</a></li>
 				<li><a title="" href="#">Packages</a></li>
-				<li>Room Packages</li>
+				<li><a th:href="@{/view/room-packages-grid}" title=""> Room Packages</a></li>
 			</ul>		
 		</div>
 	</div><!-- Page Top -->
