--- a/src/main/resources/templates/users/dsTaikhoan.html
+++ b/src/main/resources/templates/users/dsTaikhoan.html
@@ -57,7 +57,7 @@
 						Khoản</li>
 					<li class="list-group-item "><i class="fas fa-cogs"></i> Chưa
 						Nghĩ Ra</li>
-					<a class="list-group-item " th:href="@{/home/logout}"
+					<a class="list-group-item " th:href="@{/logout}"
 						th:if="${attr_user != null}"><i class="fas fa-sign-out-alt"></i>
 						Đăng Xuất</a>
 
