--- a/src/main/resources/templates/customer/booking-form.html
+++ b/src/main/resources/templates/customer/booking-form.html
@@ -38,24 +38,24 @@
 					<div class="col-md-8">
 						<div class="booking-form">
 							<div class="booking-image">
-								<img th:src="@{/images/resource/booking-image.jpg}" alt="" />
+								<img th:src="@{'/getImg/' +${item.id}}" alt="" />
 							</div><!-- Booking Image -->
 							<div class="booking-detail">
 								<div class="booking-name">
-									<span>Awesome Features Room</span>
-									<h5>Super Star Luxury Hotle</h5>
+									<span th:text="'Tên khách sạn: ' + ${item.khachsan.ten}"></span>
+									<h5 th:text="'Tên phòng: ' + ${item.ten}"></h5>
 								</div>
 								<div class="package-price">
 									<strong>Start From</strong>
-									<i>$559</i>
+									<i th:text="'$' + ${item.giathue}"></i>
 									<span>Per Person</span>
 								</div><!-- Package price -->
 								<div class="see-details">
-									<a class="book-now" th:href="@{/view/packages-detail}" title="">SEE DETAILS</a>
+									<a class="book-now" th:href="@{'/view/profile/' + ${item.id}}" title="">SEE DETAILS</a>
 								</div>
 							</div><!-- Booking Detail -->
 							<div class="center-heading">
-								<h3>Booking From</h3>
+								<h3>Booking Form</h3>
 								<span>Book rooms for your stay. It's quick and easy.</span>
 							</div>
 							<form>
